--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "website-core",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,56 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-table": "^8.9.3",
+    "@types/node": "20.4.2",
+    "@types/nodemailer": "^6.4.8",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "eslint-config-next": "13.4.11",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.263.1",
+    "mongodb": "^5.7.0",
+    "next": "13.4.11",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.4",
+    "postcss": "8.4.26",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-csv-downloader": "^2.9.1",
+    "react-dom": "18.2.0",
+    "react-email": "^1.9.4",
+    "sharp": "^0.32.4",
+    "short-unique-id": "^4.4.4",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
+  },
+  "resolutions": {
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7"
+  },
+  "devDependencies": {
+    "@types/otp-generator": "^4.0.0",
+    "@types/uuid": "^9.0.2"
   }
 }
