--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vercel": "^31.2.0"
   },
   "resolutions": {
     "@types/react": "18.2.15",
