--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -16,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,28 +25,38 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-email/button": "0.0.10",
+    "@react-email/components": "^0.0.7",
+    "@react-email/html": "0.0.4",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.2",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/validator": "^13.11.1",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "crypto": "^1.0.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
+    "fernet": "^0.4.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.263.1",
     "mongodb": "^5.7.0",
-    "next": "13.4.11",
+    "next": "^13.4.13",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.26",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-csv-downloader": "^2.9.1",
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
     "sharp": "^0.32.4",
     "short-unique-id": "^4.4.4",
     "tailwind-merge": "^1.14.0",
@@ -52,13 +64,14 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "uuid": "^9.0.0",
-    "vercel": "^31.2.0"
+    "zod": "^3.21.4"
   },
   "resolutions": {
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7"
   },
   "devDependencies": {
+    "@types/fernet": "^0.4.0",
     "@types/otp-generator": "^4.0.0",
     "@types/uuid": "^9.0.2"
   }
